# pinball

./: .gitignore  README.md
boards/: connectors.txt  fuses.txt  spi_pins.txt
boards/control_module/: about.txt
boards/control_module/software/: .gitignore  .lvimrc  .nvimrc  .projections.json  CMakeLists.txt  Makefile  audio.c  audio.cc  audio.h  bit_actuator.cc  buttons.c  buttons.h  canvas.cc  canvas.h  canvas_buffer.cc  config.h  coordinate.h  debug_display.c  debug_display.h  debug_gpio.c  debug_gpio.h  debug_spi.c  debug_spi.h  display.c  display.h  dub.json  dub.selections.json  edgerising.c  edgerising.h  framer.cc  framer.h  game_logic.cc  game_logic.h  gamelogic.c  gamelogic.cc  gamelogic.h  gpio.h  lamps.c  lamps.cc  lamps.h  (+33 more)
boards/control_module/software/source/: .nvimrc  audio.d  audio_mad_al.d  audio_sdl.d  audio_synth.d  bcm2708_spi.d  bit_actuator.d  bit_sensor.d  buffer_canvas.d  buffer_logger.d  canvas.d  condition.d  coordinate.d  curses_interface.d  five_eight.d  font.d  game_logic.d  image_canvas.d  interval.d  keep_value_delay.d  led_actuator.d  logger.d  mad.d  mad.i  mad_im.d  mad_wrap.c  main.d  mock_audio.d  mock_spi.d  png.d  pngconf.d  pnglibconf.d  read_png.d  scheduler.d  scrolling.d  sensor_actuator_override.d  signal.d  solenoids.d  sprite.d  string_canvas.d  (+5 more)
boards/control_module/software/source/game_logic/: highscore.d  player.d  playing_field.d  score_display.d  story.d  switches_as_input.d  text_display.d  text_entry.d
boards/control_module/software/source/spi/: bcm2708.c  bcm2708_spi.d  bit_actuator.d  bit_sensor.d  display.d  lamps.d  led_actuator.d  mock_spi.d  solenoids.d  switches.d
boards/control_module/software/source/sprites/: death_star_reach.d  leia_r2d2.d
boards/control_module/software/src/: CMakeLists.txt  assertions.h  audio.cc  audio.h  bit_actuator.cc  bit_actuator.h  canvas.h  config.h  coordinate.h  debug_display.h  debug_gpio.h  display_canvas.cc  font.h  font_reader.cc  framer.cc  framer.h  game_logic.cc  game_logic.h  interval_stats.h  keep_value_delay.h  main.cc  main.h  memory_sensor_actuator.h  pcf.cc  pcf.h  pcf_font.cc  pcf_font.h  render.h  scroll.h  sensor_actuator.h  sensor_actuator_override.h  signals.h  solenoids.h  spi_display.h  spi_ss.h  state_buffer.h  switches.cc  switches.h  utils.h
boards/control_module/software/src/audio/: audio.h  mock_audio.h  openal_audio.cc  openal_audio.h
boards/control_module/software/src/canvas/: broadcast_canvas.cc  broadcast_canvas.h  buffer.cc  buffer.h  canvas.h  canvas_buffer.cc  canvas_buffer.h  display_canvas.cc  display_canvas.h  paint.h  scrolling.h  scrolling_canvas.cc  scrolling_canvas.h  util.h
boards/control_module/software/src/curses_display/: display.cc  display.h
boards/control_module/software/src/display/: curses_display.h  spi_display.cc  spi_display.h
boards/control_module/software/src/display/bak/: curses_display.cc  curses_display.h
boards/control_module/software/src/game_interface/: buffer_logger.h  curses_interface.cc  curses_interface.h  dummy_interface.h  ring_buffer.h  spi_interface.h
boards/control_module/software/src/interface/: curses_interface.cc  curses_interface.h  spi_interface.h
boards/control_module/software/src/linux_spi/: spi.cc  spi.h
boards/control_module/software/src/mock_spi/: spi.cc  spi.h
boards/control_module/software/src/spi/: bit_actuator.cc  bit_actuator.h  lamps.h  linux_spi.cc  linux_spi.h  raspberry_gpio.h  solenoids.h  spi.h  spi_display.cc  spi_display.h  spi_interface.h  spi_ss.h  switches.cc  switches.h
boards/control_module/software/system/: README.txt  check_compile.sh  deploy.sh  forward.sh
boards/control_module/software/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  mock_canvas.h  test.h  test_canvas.cc  test_pcf.cc  test_pcf_font.cc
boards/control_module/software/tools/: CMakeLists.txt  Makefile  a.out  font_reader  font_reader.cc  pcf_font.cc  test.cc
boards/display_module/kicad/: display_module-cache.lib  display_module.kicad_pcb  display_module.kicad_pcb-bak  display_module.net  display_module.pro  display_module.sch  display_module.xml  my_connectors.lib  my_transistors.dcm  my_transistors.lib  test-cache.bak
boards/display_module/kicad/my_footprints.pretty/: LM23088A.kicad_mod  PINS1x2.kicad_mod  PINS3x2.kicad_mod  SW10.kicad_mod
boards/display_module/software/: Makefile  README.txt  display_module.c  display_module.h
boards/lamp_driver/software/: Makefile  lamp_driver.c  lamp_driver.h
boards/led_stripe_driver/software/: Makefile  led_stripe.c  led_stripe.h  light_ws2812.h  light_ws2812_config.h
boards/line_debugger/software/: Makefile  line_debugger.c  line_debugger.h
boards/solenoid_driver/software/: Makefile  solenoid_driver.c  solenoid_driver.h
boards/solenoid_driver/software/doc/: protocol.txt
boards/switches_module/software/: Makefile  switches_module.c  switches_module.h
boards/switches_module/software/doc/: protocol.txt
boards/target_light_driver/software/: Makefile  target_light.c  target_light.h
boards/tracer/software/: Makefile  tracer.c
common_software/include/: checksum.h  utils.h
common_software/include/spi_protocols/: buttons.h  lamps.h  solenoids.h  switches.h
common_software/src/: checksum.c  utils.c
common_software/test/: Makefile  test_checksum  test_checksum.c
resources/fish_tales/: Williams_1992_Fish_Tales_Parts_List.txt  source.txt
